syntax = "proto3";

option csharp_namespace = "ECommerceGRPC.UserService";

package userservice;

service UserService {

//Obtiene un usuario específico por ID (Unary)
rpc GetUser(GetUserRequest) returns (UserResponse);

//Obtiene una lista de usuarios con paginación y filtros (Server Streaming)
rpc GetUsers(GetUsersRequest) returns (stream UserResponse);

//Crea un nuevo usuario / Unary
rpc CreateUser(CreateUserRequest)  returns (UserResponse);

//Actualiza un usuario existente. No la contraseña / Unary
rpc UpdateUser(UpdateUserRequest) returns (UserResponse);

//Elimina un usuario específico de forma lógica / Unary
rpc DeleteUser(DeleteUserRequest)  returns (DeleteUserResponse);

//Busca usuarios por email o nombre // Server Streaming
rpc SearchUsers(SearchUsersRequest)  return (stream UserResponse);


}


message GetUserRequest {
	int32 id = 1;
}

message UserResponse {
	 int32 id = 1 ;
     string email  = 2 ;
     string firstName = 3 ; 
     string lastName = 4 ;     
     string role = 5 ;
     string created_at = 6 ;
     string last_login = 7 ;
     bool is_Active = 8 ;
}

message GetUsersRequest {
     int32 page_number = 1;      // Número de página (default: 1)
     int32 page_size = 2;         // Tamaño de página (default: 10)
     string rol = 3;            //Filtro opcional
     bool active_only = 4;        // Solo usuarios activos (default: true)
}

message CreateUserRequest {
     string email  = 1 ;
     string first_name = 2 ; 
     string last_name = 3 ;
     string password = 4 ;
     string role = 5 ;              
}

message UpdateUserRequest {
     int32 id = 1 ;
     string email  = 2 ;
     string first_name = 3 ; 
     string last_name = 4 ;
     string role = 5 ;
     bool is_active = 6 ;
}

message DeleteUserRequest {
	int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message SearchUsersRequest {
    string search_term = 1 ;
    int32 page_number = 2;
    int32 page_size = 3;
}